2003-09-15  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.mime: added "pm" as a possible extension for text/x-perl
	(Closes: #121509)

2003-09-13  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: detect FLAC files with ID3 headers as FLAC
	* gnome-vfs.keys.in: add image/jpg, the MacOS X Mailer engineers can't
	read properly (Closes: #122184)

2003-09-10  Bastien Nocera  <hadess@hadess.net>

	* configure.in: pump up to 2.4.0
	* gnome-vfs.keys.in: make x-directory/smb-share use a component
	as the default handler (fixes smb browsing)

2003-09-01  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "ne" to ALL_LINGUAS.

2003-08-30  Laurent Dhima  <laurenti@alblinux.net>

	* configure.in: Added "sq" to ALL_LINGUAS.
	
2003-08-29  Bastien Nocera  <hadess@hadess.net>

	* check-mime.pl: add default_application_id as an expected key
	* gnome-vfs.keys.in: revert some change from the previous commit
	to not remove Marco's changes

2003-08-29  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.applications:
	* gnome-vfs.keys.in: fix a bunch of warnings from check-mime.pl,
	add eog and the image view as a handler for image/x-ico mime-types

2003-08-25  Marco Pesenti Gritti  <marco@gnome.org>

	* gnome-vfs.keys.in:

	Make epiphany default handler for text/html.

2003-08-20  Luis Villa <louie@ximian.com>

	* gnome-vfs.applications: add epiphany, based on galeon entry

2003-08-18  Luis Villa <louie@ximian.com>

	* gnome-vfs.mime: add 'mrproject' extension for mrproject files
	* gnome-vfs.keys.in: make epiphany and galeon preferred over
	mozilla where appropriate
	* gnome-vfs.keys.in: fix tabbing of x-javascript entry. Left lack
	of translation because of string freeze.

2003-08-13  Christian Neumair  <chris@gnome-de.org>

	* gnome-vfs.applications: Use AbiWord 2.0 executable.
	* gnome-vfs.keys.in: Make Wine the default application for MS DOS
	executables.

2003-08-07  Bastien Nocera  <hadess@hadess.net>

	* .cvsignore: upd
	* configure.in: 2.3.1 is out
